--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
