--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.749.0",
     "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pug": "2.0.0-beta11"
